--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
           
         
         <li>
-          <a href="/uploads/Praveen_Resume_20220423.pdf/"  aria-label="cv">
+          <a href="/uploads/Praveen_Resume_20220423.pdf"  aria-label="cv">
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
