--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
 
       
       <div class="col-md-5">
-        <div class="section-subheading">Interests</div>
+        <div class="section-subheading">Research Interests</div>
         <ul class="ul-interests mb-0">
           
           <li>Deep Learning</li>
