--- a/index.html
+++ b/index.html
@@ -989,7 +989,8 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">M.S. in Future Vehicle Program, Mar 2021 - Feb 2023</p>
-              <p class="institution">Korea Advanced Institute of Science and Technology   GPA 3.9 / 4.3</p>
+              <p class="institution">Korea Advanced Institute of Science and Technology</p>
+              <p>GPA: <b>3.9 / 4.3</b>.</p>
             </div>
           </li>
           
