--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
             <div class="description">
               <p class="course">M.S. in Future Vehicle Program, Mar 2021 - Feb 2023</p>
               <p class="institution">Korea Advanced Institute of Science and Technology</p>
-              <p style="font-size:12px;">GPA: <b>3.9 / 4.3</b>.</p>
+              <p style="font-size:12px;">GPA: <b>3.9 / 4.3</b></p>
             </div>
           </li>
           
@@ -998,7 +998,9 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">B.E. in Electrical and Electronics Engineering, Jun 2013 - May 2017</p>
-              <p class="institution">Anna University   GPA 8.1 / 10</p>
+              <p class="institution">Anna University</p>
+              <p style="font-size:12px;">GPA: <b>8.1 / 10</b></p>
+              <p style="font-size:12px;">Transcript is <a href="https://drive.google.com/file/d/1COw-zpfjnrf-NhoVDMCnzU0MgpdFtH_G/view?usp=sharing">here</a></p>
             </div>
           </li>
           
