--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
               <p class="course">B.E. in Electrical and Electronics Engineering, Jun 2013 - May 2017</p>
               <p class="institution">Anna University</p>
               <p style="font-size:12px;">GPA: <b>8.1 / 10</b></p>
-              <p style="font-size:12px;">Transcript is <a href="https://drive.google.com/file/d/1COw-zpfjnrf-NhoVDMCnzU0MgpdFtH_G/view?usp=sharing">here</a></p>
+              <p style="font-size:12px;">Transcript is <a href="https://drive.google.com/file/d/1COw-zpfjnrf-NhoVDMCnzU0MgpdFtH_G/view?usp=sharing" target="_blank">here</a></p>
             </div>
           </li>
           
