--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
 <ul>
 <li>May 2022: I'm excited to announce that I've been accepted to the <a href="https://www.oxfordml.school/" target="_blank" rel="noopener">Oxford Machine Learning Summer School (OxML 2022)</a>, which will take place in August at the University of Oxford.</li>
 <li>Apr 2022: Completed the course of <a href="https://www.coursera.org/learn/probabilistic-graphical-models" target="_blank" rel="noopener">Probabilistic Graphical Models 1: Representation</a> by <em>Daphne Koller - Stanford University</em></li>
-<li>Feb 2022: One Paper submitted to <a href="https://2022.ieeeicip.org/" target="_blank" rel="noopener">ICIP 2022</a></li>
+<!-- <li>Feb 2022: One Paper submitted to <a href="https://2022.ieeeicip.org/" target="_blank" rel="noopener">ICIP 2022</a></li> -->
 <li>Jan 2022: Received full financial aid from Coursera for <a href="https://www.coursera.org/learn/probabilistic-graphical-models" target="_blank" rel="noopener">Probabilistic Graphical Models 1: Representation</a></li>
 <li>Dec 2021: Selected for <a href="https://lokender.github.io/" target="_blank" rel="noopener">3D Computer Vision Research Internship</a> at <a href="https://www.tcs.com/research-and-innovation" target="_blank" rel="noopener">TCS Research</a></li>
 </ul>
@@ -3697,7 +3697,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/ftp/arxiv/papers/2202/2202.12838.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2202.12838.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -3728,7 +3728,7 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/ftp/arxiv/papers/2202/2202.12838.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2202.12838.pdf" target="_blank" rel="noopener">
   Slides
 </a>
 
