--- a/publication/index.html
+++ b/publication/index.html
@@ -1042,13 +1042,13 @@
   <a href="/publication/relmobnet/" >
     <div class="img-hover-zoom">
       <img src="/publication/relmobnet/featured_hu8ccf8268856b2ac717f604726d963951_386997_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
-           class="article-banner" alt="RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation" loading="lazy">
+           class="article-banner" alt="RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training" loading="lazy">
     </div>
   </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/relmobnet/" >RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation</a>
+    <a href="/publication/relmobnet/" >RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training</a>
   </div>
 
   
