--- a/publication/relmobnet/index.html
+++ b/publication/relmobnet/index.html
@@ -300,7 +300,7 @@
   
   <meta property="og:site_name" content="Praveen" />
   <meta property="og:url" content="https://praveenkumar-rajendran.github.io/publication/relmobnet/" />
-  <meta property="og:title" content="RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation | Praveen" />
+  <meta property="og:title" content="RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training | Praveen" />
   <meta property="og:description" content="Relative camera pose estimation plays a pivotal role in dealing with 3D reconstruction and visual localization. To address this, we propose a Siamese network based on MobileNetV3-Large for an end-to-end relative camera pose regression independent of camera parameters." /><meta property="og:image" content="https://praveenkumar-rajendran.github.io/publication/relmobnet/featured.png" />
     <meta property="twitter:image" content="https://praveenkumar-rajendran.github.io/publication/relmobnet/featured.png" /><meta property="og:locale" content="en-us" />
   
@@ -334,7 +334,7 @@
     "@type": "WebPage",
     "@id": "https://praveenkumar-rajendran.github.io/publication/relmobnet/"
   },
-  "headline": "RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation",
+  "headline": "RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training",
   
   "image": [
     "https://praveenkumar-rajendran.github.io/publication/relmobnet/featured.png"
@@ -372,7 +372,7 @@
 
 
 
-  <title>RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation | Praveen</title>
+  <title>RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training | Praveen</title>
 </head>
 
 
@@ -790,7 +790,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation</h1>
+  <h1>RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training</h1>
 
   
 
