--- a/index.html
+++ b/index.html
@@ -1104,9 +1104,10 @@ I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng
   <div class="col-md-12">
     <div style="text-align: left"> 
 <ul>
+<li>Oct 2022: I will be reviewer for <a href="https://www.icra2023.org/" target="_blank" rel="noopener">ICRA 2023, London</a></li>
 <li>Aug 2022: I am pleased to announce that our work <a href="https://arxiv.org/abs/2202.12838/" target="_blank" rel="noopener">RelMobNet</a> is accepted at the <a href="https://eccv2022.ecva.net/" target="_blank" rel="noopener">ECCV Workshop 2022</a></li>
 <li>May 2022: I'm excited to announce that I've been accepted to the <a href="https://www.oxfordml.school/" target="_blank" rel="noopener">Oxford Machine Learning Summer School (OxML 2022)</a>, which will take place in August at the University of Oxford.</li>
-<li>Apr 2022: Completed the course of <a href="https://www.coursera.org/learn/probabilistic-graphical-models" target="_blank" rel="noopener">Probabilistic Graphical Models 1: Representation</a> by <em>Daphne Koller - Stanford University</em></li>
+<!-- <li>Apr 2022: Completed the course of <a href="https://www.coursera.org/learn/probabilistic-graphical-models" target="_blank" rel="noopener">Probabilistic Graphical Models 1: Representation</a> by <em>Daphne Koller - Stanford University</em></li> -->
 <!-- <li>Feb 2022: One Paper submitted to <a href="https://2022.ieeeicip.org/" target="_blank" rel="noopener">ICIP 2022</a></li> -->
 <li>Jan 2022: Received full financial aid from Coursera for <a href="https://www.coursera.org/learn/probabilistic-graphical-models" target="_blank" rel="noopener">Probabilistic Graphical Models 1: Representation</a></li>
 <li>Dec 2021: Selected for <a href="https://lokender.github.io/" target="_blank" rel="noopener">3D Computer Vision Research Internship</a> at <a href="https://www.tcs.com/research-and-innovation" target="_blank" rel="noopener">TCS Research</a></li>
