--- a/index.html
+++ b/index.html
@@ -965,11 +965,12 @@
 
     <div class="article-style">
       <p>I&rsquo;m Praveen.</p>
-<p>I am a Graduate student researcher in <a href="http://vil.kaist.ac.kr/" target="_blank" rel="noopener">Vehicular Intelligence Lab</a> at <a href="https://breakthroughs.kaist.ac.kr/" target="_blank" rel="noopener">Korea Advanced Institute of Science and Technology</a>.<br>
-Currently pursuing M.S. in Future Vehicle Program, advised by <a href="http://vil.kaist.ac.kr/trendix/member_detail.php?mode=faculty" target="_blank" rel="noopener"><strong>Prof. Dongsoo Har</strong></a>. My research interests include deep learning, 3D computer vision and autonomous driving. Before joining KAIST, I worked with <a href="http://www.slworld.com/" target="_blank" rel="noopener"><strong>SL Lumax and SL Corporation</strong></a> as Automotive Software Engineer.</p>
-<p>I enjoy videos of <a href="https://www.3blue1brown.com/" target="_blank" rel="noopener"><strong>3Blue1Brown</strong></a> and <a href="https://www.youtube.com/c/veritasium" target="_blank" rel="noopener"><strong>Veritasium</strong></a>.<br>
-I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng/index.do" target="_blank" rel="noopener">officially listed bicycling paths</a> in Korea and received <em>Cycling Road Grand Slam Award</em>.</p>
-<p>Reach me by <a href="mailto:aravindhanpraveen19@gmail.com,praveenkumar@kaist.ac.kr"><strong>email</strong></a>, or connect with me on <a href="https://www.linkedin.com/in/praveenkumar-rajendran/" target="_blank" rel="noopener"><strong>LinkedIn</strong></a></p>
+      <p>I am a Computer Vison / AI Research Engineer at <a href="https://www.neubility.co.kr/" target="_blank" rel="noopener">Neubility</a>, I specialize in developing perception algorithms for self-driving robots. 
+        I possess a deep understanding of multiview geometry and a passion for training deep neural networks and optimizing them to make them lightweight.</p>
+        <p>Previously, I was a Graduate student researcher in <a href="http://vil.kaist.ac.kr/" target="_blank" rel="noopener">Vehicular Intelligence Lab</a> at <a href="https://breakthroughs.kaist.ac.kr/" target="_blank" rel="noopener">Korea Advanced Institute of Science and Technology</a> where I pursued M.S. in Future Vehicle Program, advised by <a href="http://vil.kaist.ac.kr/trendix/member_detail.php?mode=faculty" target="_blank" rel="noopener"><strong>Prof. Dongsoo Har</strong></a>. My research interests include deep learning, 3D computer vision and autonomous driving. Also, I worked with <a href="http://www.slworld.com/" target="_blank" rel="noopener"><strong>SL Lumax and SL Corporation</strong></a> as Automotive Software Engineer.</p>
+        <p>I enjoy videos of <a href="https://www.3blue1brown.com/" target="_blank" rel="noopener"><strong>3Blue1Brown</strong></a> and <a href="https://www.youtube.com/c/veritasium" target="_blank" rel="noopener"><strong>Veritasium</strong></a>.<br>
+        I love cycling. I&rsquo;ve completed all the <a href="https://www.bike.go.kr/eng/index.do" target="_blank" rel="noopener">officially listed bicycling paths</a> in Korea and received <em>Cycling Road Grand Slam Award</em>.</p>
+        Connect with me on <a href="https://www.linkedin.com/in/praveenkumar-rajendran/" target="_blank" rel="noopener"><strong>LinkedIn!</strong></a></p>
 
     </div>
 
