--- a/index.html
+++ b/index.html
@@ -1239,8 +1239,14 @@
           
 
           <div class="card-text"><ul>
-<li>Working on Object detection/Segmentation algorithm development</li>
-</ul>
+<li>Spearheaded the development of AI-based object detection algorithms/handling class imbalance data.</li>
+<li>Leveraged Diffusion-based AI methods to diversify training data and enhance model performance.</li>
+<li>Analyzed and managed open/proprietary datasets to extract valuable insights.</li>
+<li>Proficiently utilized MLOps tools like WandB and MLflow for streamlined development and deployment.</li>
+<li>Developed systems for deidentifying sensitive data, such as human faces and car license plates.</li>
+<li>Uncertainty-based active learning to improve the data pipeline/model performance.</li>
+<li>Continually incorporating state-of-the-art approaches to improve system performance.</li>
+<li>Familiar with Docker/ONNX/TensorRT for deployment.</li></ul>
 </div>
         </div>
       </div>
